--- a/templates/employee/new.html.twig
+++ b/templates/employee/new.html.twig
@@ -14,11 +14,13 @@
                 {{ form_start(form) }}
                     <div class="row">
                         {% for field in form %}
+                        {% if field.vars.name != '_token' %}
                             <div class="col-md-6 mb-3">
                                 {{ form_label(field, null, {'label_attr': {'class': 'form-label'}}) }}
                                 {{ form_widget(field, {'attr': {'class': 'form-control'}}) }}
                                 {{ form_errors(field) }}
                             </div>
+                            {% endif %}
                         {% endfor %}
                     </div>
                     <div class="text-end">
